--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="topnav">
-        <a class="active" href="#">Pizzeria</a>
+        <a class="active" href="#">Pizzaria</a>
         <div class="topnav-right">
          <a href="#viewblock">Visualizar Menu</a>
          <a href="#addTopings">Adicionar Menu</a>
